syntax = "proto3";

option csharp_namespace = "_COMPANYNAME_._PROJECTNAME_._SERVICE_.MessageBroker.Protos.Server";
import "Proto/responseResult.proto";

service SendTestService {
  rpc SendTest (SendDataRequest) returns (SendDataResponse) {}
}

message SendDataRequest {
}

message SendDataResponse {
	ResponseResult Value = 1;
}

